# bibvet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  report.md
.github/workflows/: ci.yml
src/bibvet/: __init__.py  __main__.py  cache.py  cli.py  compare.py  fix.py  http.py  models.py  normalize.py  parser.py  pipeline.py  ratelimit.py  resolve.py
src/bibvet/render/: __init__.py  json.py  markdown.py  terminal.py
src/bibvet/sources/: __init__.py  arxiv.py  base.py  crossref.py  semantic_scholar.py
tests/: test_cache.py  test_cli.py  test_compare.py  test_fix.py  test_http.py  test_models.py  test_normalize.py  test_parser.py  test_pipeline.py  test_ratelimit.py  test_real_world.py  test_resolve.py
tests/fixtures/arxiv/: found.xml
tests/fixtures/bib/: clean.bib  malformed.bib  mixed_types.bib
tests/fixtures/crossref/: doi_found.json  title_match.json
tests/fixtures/semantic_scholar/: doi_found.json  title_match.json
tests/test_render/: test_json.py  test_markdown.py  test_terminal.py
tests/test_sources/: test_arxiv.py  test_crossref.py  test_semantic_scholar.py
