[project]
name = "bibvet"
version = "0.0.1"
description = "Vet your bibliography: verify .bib entries against CrossRef, Semantic Scholar, and arXiv to catch hallucinated citations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shubhashis Roy Dipta" }]
keywords = ["bibtex", "bibliography", "citation", "latex", "academic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "bibtexparser>=2.0.0b8",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "rich>=13.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
bibvet = "bibvet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bibvet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017", "B905", "E501"]
